Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.3.1
-
Fix Version/s: Qt Creator 4.9.2, Qt Creator 4.10.0-beta2
-
Component/s: All Other Issues
-
Labels:None
-
Commits:5bcc70b34deb1dd590cca0c115511f3c6fa9f763 (qt-creator/qt-creator/4.10)
Description
When reporting a bug against Qt Creator using "Help -> Report Bug...", the general landing page of the bug tracker is opened. This is quite inconvenient since one has to figure out Qt Creator's product page in the bug tracker before being able to report a bug. Having Qt Creator directly point to its own product page would eliminate this paper cut.