Fix bug for with redirect to general landing page Qt bug tracker. Now the redirection goes to the page creating the bug

Fixes: QTCREATORBUG-18734
Change-Id: I49847edce7da6a993ded3a9538334279965b6eb4
Reviewed-by: Eike Ziller <eike.ziller@qt.io>